fix iphone overflow-x

--- a/scripture-habit/src/Components/Dashboard/Dashboard.css
+++ b/scripture-habit/src/Components/Dashboard/Dashboard.css
@@ -14,6 +14,7 @@
   height: calc(100vh - 32px);
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 .welcome-buttons {
@@ -51,6 +52,7 @@
   flex-direction: column;
   gap: 1rem;
   overflow-y: auto;
+  overflow-x: hidden;
   height: 100%;
   box-sizing: border-box;
 }
