--- a/scripture-habit/src/Components/Maintenance/Maintenance.css
+++ b/scripture-habit/src/Components/Maintenance/Maintenance.css
@@ -1,6 +1,6 @@
 .maintenance-container {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
