--- a/scripture-habit/src/Components/MyNotes/MyNotes.css
+++ b/scripture-habit/src/Components/MyNotes/MyNotes.css
@@ -4,6 +4,7 @@
     height: 100%;
     width: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 1rem;
     box-sizing: border-box;
 }
